--- a/app/src/main/res/layout/product_pictures_grid_item.xml
+++ b/app/src/main/res/layout/product_pictures_grid_item.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:layout_centerInParent="true">
 
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_centerInParent="true"
         app:cardUseCompatPadding="true"
         app:cardElevation="4dp"
         android:padding="4dp"
