--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,14 @@
             android:icon="@drawable/ic_menu_barcode_scan"
             android:title="@string/nav_barcode" />
         <item
+            android:id="@+id/nav_list"
+            android:icon="@drawable/ic_menu_view_list"
+            android:title="list" />
+        <item
+            android:id="@+id/nav_chart"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="chart" />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
             android:title="@string/nav_settings" />
