--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,5 +25,9 @@
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
             android:title="@string/nav_settings" />
+        <item
+            android:id="@+id/nav_stats"
+            android:icon="@drawable/ic_menu_settings"
+            android:title="@string/stats" />
     </group>
 </menu>
